Update copyright year

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,7 +3,7 @@
     <Authors>Luca Ritossa</Authors>
     <Company>Ritossa</Company>
     <Product>Ritossa.DevOpsArtifactsCleaner</Product>
-    <Copyright>Copyright © Luca Ritossa 2023</Copyright>
+    <Copyright>Copyright © Luca Ritossa 2023-2024</Copyright>
     <Description>This is a library of DevOps Artifacts Cleaner</Description>
 
     <PackageDescription>This is a library of DevOps Artifacts Cleaner</PackageDescription>
